; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_execute.c_ECPGdo_descriptor.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_execute.c_ECPGdo_descriptor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ECPG_COMPAT_PGSQL = common dso_local global i32 0, align 4
@ECPGt_EOIT = common dso_local global i32 0, align 4
@ECPGt_descriptor = common dso_local global i32 0, align 4
@ECPGt_NO_INDICATOR = common dso_local global i32 0, align 4
@ECPGt_EORT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ECPGdo_descriptor(i32 %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @ECPG_COMPAT_PGSQL, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = load i32, i32* @ECPGt_EOIT, align 4
  %14 = load i32, i32* @ECPGt_descriptor, align 4
  %15 = load i8*, i8** %7, align 8
  %16 = load i32, i32* @ECPGt_NO_INDICATOR, align 4
  %17 = load i32, i32* @ECPGt_EORT, align 4
  %18 = call i32 @ECPGdo(i32 %9, i32 %10, i32 1, i8* %11, i8 signext 0, i32 0, i8* %12, i32 %13, i32 %14, i8* %15, i64 0, i64 0, i64 0, i32 %16, i32* null, i64 0, i64 0, i64 0, i32 %17)
  ret i32 %18
}

declare dso_local i32 @ECPGdo(i32, i32, i32, i8*, i8 signext, i32, i8*, i32, i32, i8*, i64, i64, i64, i32, i32*, i64, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
